--- a/app/src/main/res/layout/activity_fifth_splash_screen.xml
+++ b/app/src/main/res/layout/activity_fifth_splash_screen.xml
@@ -19,5 +19,5 @@
         android:layout_centerInParent="true"
         android:layout_marginTop="54dp"
         android:contentDescription="@string/logo"
-        android:src="@drawable/img" />
+        android:src="@drawable/location_background" />
 </RelativeLayout>
